US-0043476: Vijay US: Demo lwc update

--- a/lwc/demoComponent/demoComponent.html
+++ b/lwc/demoComponent/demoComponent.html
@@ -1,7 +1,7 @@
 <template>
     <lightning-card title="Demo LWC" icon-name="custom:custom14">
         <p class="slds-p-horizontal_small">
-            This is a demo Lightning Web Component 🚀
+            This is a demo Lightning Web Component
         </p>
     </lightning-card>
 </template>
