US-0043487: Vijay US: Puppet LWC Update

--- a/lwc/puppet/puppet.html
+++ b/lwc/puppet/puppet.html
@@ -1,5 +1,5 @@
 <template>
     <div class="puppet-container">
-        <h1>Hello from Puppet LWC!</h1>
+        <h1>Hello Puppet LWC!</h1>
     </div>
 </template>
